#39 - [BUG] Vencimento mesmo no futuro aparecendo como atrasado apos edição